Fixed problems with install dependencies (#5)
* update from master

* chg .gitignore

* chgs requirements docker

* chgs requirements docker + rename cx_oracle_spatial dir

* add env path_mode to use in setup with format_requirement

* add env path_mode + rename macos to unix

* chgs files conda + chg README.md

* fix requirements docker

* fix conda env requirements

* Updated readme.md

Co-authored-by: Ernest Arredondo <earredondo@nexusgeographics.com>

--- a/environment.docker.yml
+++ b/environment.docker.yml
@@ -1,6 +1,7 @@
-python<3.8
-nodejs<13
+python >=3.7,<4
+nodejs <13
 eumetsat::oracle-instantclient
-conda-forge::gdal>3
-conda-forge::geopandas
-pip>3
+conda-forge::gdal >=3,<4
+conda-forge::geopandas >=0.8,<0.9
+cx_Oracle<7
+pip >=20
