--- a/environment.yml
+++ b/environment.yml
@@ -5,15 +5,11 @@ channels:
 - anaconda
 - javascript
 dependencies:
-- python<3.8
-- nodejs<13
-- conda-forge::gdal>3
-- conda-forge::geopandas
-- pip>3
+- python >=3.7,<4
+- nodejs <13
+- conda-forge::gdal >=3,<4
+- conda-forge::geopandas >=0.8,<0.9
+- cx_Oracle <7
+- pip >=20
 - pip:
-  - --editable extra_utils_pckg
-  - --editable spatial_utils_pckg
-  - --editable osgeo_utils_pckg
-  - --editable pandas_utils_pckg
-  - --editable cx_ora_spatial_pckg
-  # - --requirement file:requirements.txt
+   - --requirement file:requirements.txt
