--- a/environment.DEV.yml
+++ b/environment.DEV.yml
@@ -1,4 +1,4 @@
-name: python_packages
+name: python_packages_DEV
 channels:
 - defaults
 - conda-forge
@@ -12,4 +12,4 @@ dependencies:
 - cx_Oracle <9
 - pip >=20
 - pip:
-   - --requirement file:requirements.txt
+#   - --requirement file:requirements.txt
