--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@
 # Python files #
 ################
 # setup.py working directory
-/build
+**/build
 # sphinx build directory
 /_build
 # setup.py dist directory
@@ -128,7 +128,6 @@ anaconda-project-local.yml
 /node_modules
 *.lnk
 **/.egg-info/
-/extra_utils_pckg/dist/
-/extra_utils_pckg/build/
 
 !/resources/data/edificacio.zip
+
