--- a/environment.DEV.yml
+++ b/environment.DEV.yml
@@ -5,11 +5,10 @@ channels:
 - anaconda
 - javascript
 dependencies:
-- python >=3.7,<4
-- nodejs <13
-- conda-forge::gdal >=3,<4
-- conda-forge::geopandas >=0.8,<0.9
-- cx_Oracle <9
-- pip >=20
-- pip:
-#   - --requirement file:requirements.txt
+- python
+- nodejs=10.13
+- conda-forge::gdal=3.5
+- conda-forge::geopandas=0.8
+- ipython
+- cython
+- pip
