config docker compose net to not overrride others

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     container_name: postgis
     env_file:
       - ./docker_settings/postgis.env
+    networks:
+      app_net:
+        ipv4_address: 10.92.1.6
     ports:
       - 25432:5432
     volumes:
@@ -15,6 +18,9 @@ services:
     container_name: oracle_xe
     volumes:
       - oracle_xe-vol:/u01/app/oracle
+    networks:
+      app_net:
+        ipv4_address: 10.92.1.5
     ports:
       - 25521:1521
     environment:
@@ -22,11 +28,22 @@ services:
   python_packages:
     container_name: python_packages
     build: .
+    image: ernestone/python_gdal_oracle_geopandas
     volumes:
       - .:/project
+    networks:
+      app_net:
+        ipv4_address: 10.92.1.10
     depends_on:
       - db_ora_pyckg
       - db_pg_pyckg
+
+networks:
+  app_net:
+    ipam:
+      driver: default
+      config:
+        - subnet: "10.92.1.0/24"
 
 volumes: 
   oracle_xe-vol:
