--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -36,7 +36,7 @@ RUN mkdir --parents $ORACLE_HOME && \
 
 RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get update && apt-get upgrade -yq \
-    && apt-get install -yq --no-install-recommends alien libaio1 \
+    && apt-get install -yq --no-install-recommends alien libaio1 locales locales-all \
     && cd /tmp/oracle \
     && for rpm in ./*.rpm; do alien -i $rpm; done \
     && ln -s ${ORACLE_HOME} ${ORACLE_HOME}/include \
@@ -48,6 +48,12 @@ RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get clean \
     && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
     && echo $TZ > /etc/timezone
+
+ARG ARG_LANG=es_ES.UTF-8
+ENV LANG=$ARG_LANG
+ENV LANGUAGE=$ARG_LANG
+ENV LC_ALL=$ARG_LANG
+ENV PYTHONUNBUFFERED=1
 
 USER appuser
 
