--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   python_packages:
     container_name: python_packages
     build: .
-    image: ernestone/python_gdal_oracle_geopandas
+    image: planolport/python_gdal_oracle_geopandas:training
     volumes:
       - .:/project
     networks:
