--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,20 @@ services:
     depends_on:
       - db_ora_pyckg
       - db_pg_pyckg
+  python_packages_doc:
+    container_name: python_packages_doc
+    build: .
+    image: planolport/python_gdal_oracle_geopandas:training
+    volumes:
+      - .:/project
+    networks:
+      app_net:
+    environment:
+      - PORT_SERVER_DOC=8095
+      - PACKAGES_DOC=cx_oracle_spatial extra_osgeo_utils extra_utils pandas_utils spatial_utils
+    ports:
+      - 8095:8095
+    command: /bin/bash -c "/project/docs/build_doc_and_serve.sh"
 
 networks:
   app_net:
