--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -75,4 +75,7 @@ RUN conda run -n python_packages pip install --editable cx_oracle_spatial_pckg -
 COPY --chown=appuser:root ./pandas_utils_pckg/ ./pandas_utils_pckg/
 RUN conda run -n python_packages pip install --editable pandas_utils_pckg --no-cache-dir
 
+COPY --chown=appuser:root ./duckdb_utils_pckg/ ./duckdb_utils_pckg/
+RUN conda run -n python_packages pip install --editable duckdb_utils_pckg --no-cache-dir
+
 CMD ["conda", "run", "-n", "python_packages", "python"]
