--- a/Dockerfile.from_conda
+++ b/Dockerfile.from_conda
@@ -125,4 +125,7 @@ RUN pip install --editable cx_oracle_spatial_pckg --no-cache-dir
 COPY --chown=appuser:root ./pandas_utils_pckg/ ./pandas_utils_pckg/
 RUN pip install --editable pandas_utils_pckg --no-cache-dir
 
+COPY --chown=appuser:root ./duckdb_utils_pckg/ ./duckdb_utils_pckg/
+RUN pip install --editable duckdb_utils_pckg --no-cache-dir
+
 CMD ["python"]
