remove dependency nodejs=10.13

--- a/environment.docker.yml
+++ b/environment.docker.yml
@@ -2,9 +2,9 @@ name: python_packages
 channels:
 - conda-forge
 - anaconda
-- javascript
 dependencies:
 - python=3.10
-- nodejs=10.13
 - gdal=3.6
 - pip
+- pip:
+    - -r requirements.txt
