--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -72,7 +72,12 @@ RUN conda run -n python_packages pip install --editable cx_oracle_spatial_pckg -
 COPY --chown=appuser:root ./pandas_utils_pckg/ ./pandas_utils_pckg/
 RUN conda run -n python_packages pip install --editable pandas_utils_pckg --no-cache-dir
 
-COPY --chown=appuser:root ./duckdb_utils_pckg/ ./duckdb_utils_pckg/
-RUN conda run -n python_packages pip install --editable duckdb_utils_pckg --no-cache-dir
+# Set extra extensions perinstalled on duckdb
+RUN conda run -n python_packages python -c  \
+    "import duckdb; \
+    duckdb.install_extension('sqlite'); \
+    duckdb.install_extension('spatial'); \
+    duckdb.install_extension('json'); \
+    duckdb.install_extension('httpfs')"
 
 CMD ["conda", "run", "-n", "python_packages", "python"]
