--- a/Dockerfile.from_conda
+++ b/Dockerfile.from_conda
@@ -124,5 +124,12 @@ RUN pip install --editable pandas_utils_pckg --no-cache-dir
 
 COPY --chown=appuser:root ./duckdb_utils_pckg/ ./duckdb_utils_pckg/
 RUN pip install --editable duckdb_utils_pckg --no-cache-dir
+# Set extra extensions perinstalled on duckdb
+RUN python -c  \
+    "import duckdb; \
+    duckdb.install_extension('sqlite'); \
+    duckdb.install_extension('spatial'); \
+    duckdb.install_extension('json'); \
+    duckdb.install_extension('httpfs')"
 
 CMD ["python"]
