--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     image: planolport/python_gdal_oracle_geopandas:training
     volumes:
       - .:/project
+      - ${DATA_DIR_DEV:-C:/data}:/project/data
     networks:
       app_net:
     depends_on:
