--- a/extra_utils_pckg/extra_utils/logging.conf.yml
+++ b/extra_utils_pckg/extra_utils/logging.conf.yml
@@ -3,12 +3,10 @@ disable_existing_loggers: False
 
 
 formatters:
-  debug:
-    format: '%(levelname)s - %(message)s'
   reports:
     format: '%(asctime)s | %(message)s'
   log:
-    format: '%(levelname)s | %(asctime)s | %(module)s.%(funcName)s | %(message)s'
+    format: '%(asctime)s | %(name)s | %(levelname)s | %(module)s.%(funcName)s | %(message)s'
 
 filters:
   problems_filter:
@@ -19,7 +17,7 @@ handlers:
   console:
     class: logging.StreamHandler
     level: DEBUG
-    formatter: debug
+    formatter: log
     stream: ext://sys.stdout
   REPORTS:
     class: logging.NullHandler
@@ -32,5 +30,4 @@ handlers:
     formatter: log
 
 root:
-  level: DEBUG
   handlers: [console, REPORTS, LOG]
