add docker builds no_cache cmds + fix deprecated pip install --editable (see https://github.com/pypa/pip/issues/11457) for Dockerfile.mamba

--- a/Dockerfile.mamba
+++ b/Dockerfile.mamba
@@ -88,24 +88,24 @@ ENV PYTHONUNBUFFERED=1
 USER $MAMBA_USER
 
 COPY --chown=$MAMBA_USER:root ./extra_utils_pckg/ ./extra_utils_pckg/
-RUN micromamba run -n ${ENV_NAME} pip install --editable extra_utils_pckg --no-cache-dir
+RUN micromamba run -n ${ENV_NAME} pip install --config-setting editable_mode=compat --no-build-isolation  --editable extra_utils_pckg --no-cache-dir
 
 COPY --chown=$MAMBA_USER:root ./extra_osgeo_utils_pckg/ ./extra_osgeo_utils_pckg/
-RUN micromamba run -n ${ENV_NAME} pip install --editable extra_osgeo_utils_pckg --no-cache-dir
+RUN micromamba run -n ${ENV_NAME} pip install --config-setting editable_mode=compat --no-build-isolation  --editable extra_osgeo_utils_pckg --no-cache-dir
 
 COPY --chown=$MAMBA_USER:root ./spatial_utils_pckg/ ./spatial_utils_pckg/
-RUN micromamba run -n ${ENV_NAME} pip install --editable spatial_utils_pckg --no-cache-dir
+RUN micromamba run -n ${ENV_NAME} pip install --config-setting editable_mode=compat --no-build-isolation  --editable spatial_utils_pckg --no-cache-dir
 
 COPY --chown=$MAMBA_USER:root ./cx_oracle_spatial_pckg/ ./cx_oracle_spatial_pckg/
 # Set env var for package python cx_oracle_spatial
 ENV PATH_INSTANT_CLIENT_ORACLE=$ORACLE_HOME
-RUN micromamba run -n ${ENV_NAME} pip install --editable cx_oracle_spatial_pckg --no-cache-dir
+RUN micromamba run -n ${ENV_NAME} pip install --config-setting editable_mode=compat --no-build-isolation  --editable cx_oracle_spatial_pckg --no-cache-dir
 
 COPY --chown=$MAMBA_USER:root ./pandas_utils_pckg/ ./pandas_utils_pckg/
-RUN micromamba run -n ${ENV_NAME} pip install --editable pandas_utils_pckg --no-cache-dir
+RUN micromamba run -n ${ENV_NAME} pip install --config-setting editable_mode=compat --no-build-isolation  --editable pandas_utils_pckg --no-cache-dir
 
 COPY --chown=$MAMBA_USER:root ./duckdb_utils_pckg/ ./duckdb_utils_pckg/
-RUN micromamba run -n ${ENV_NAME} pip install --editable duckdb_utils_pckg --no-cache-dir
+RUN micromamba run -n ${ENV_NAME} pip install --config-setting editable_mode=compat --no-build-isolation  --editable duckdb_utils_pckg --no-cache-dir
 # Set extra extensions perinstalled on duckdb
 RUN micromamba run -n ${ENV_NAME} python -c  \
     "import duckdb; \
