minor fixes to impreve pdocs packages - add nodejs to dockerimage to impreve search - default logo pointing to web apb - add favicon - add duckdb_utils to main readme - remove logo & add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -131,8 +131,7 @@ anaconda-project-local.yml
 
 !/resources/data/edificacio.zip
 
-/docs/html
-!/docs/html/logo.png
+/docs/html/
 
 resources/data/edificacio_25831.csv
 resources/data/edificacio_25831.csvt
