--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
         - ORACLE_AVAILABLE=0
     image: planolport/python_gdal_geopandas:training
 
-  python_packages:
+  python_packages: &python_packages_dev
     <<: *python_packages_base
     container_name: python_packages_dev
     build:
@@ -94,7 +94,7 @@ services:
     image: planolport/mamba_gdal_oracle:training
 
   python_packages_doc:
-    <<: *python_packages_base
+    <<: *python_packages_dev
     container_name: python_packages_doc
     volumes:
       - .:/project
