--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -48,7 +48,7 @@ RUN pip install  --config-setting editable_mode=compat --no-build-isolation --ed
 
 COPY --chown=$USER_NAME:root ./apb_cx_oracle_spatial_pckg/ ./apb_cx_oracle_spatial_pckg/
 # Set env var for package python apb_cx_oracle_spatial
-ENV PATH_INSTANT_CLIENT_ORACLE=$ORACLE_HOME
+ENV PATH_INSTANT_CLIENT_ORACLE=$ORACLE_CLIENT_PATH
 RUN pip install  --config-setting editable_mode=compat --no-build-isolation --editable apb_cx_oracle_spatial_pckg --no-cache-dir
 
 COPY --chown=$USER_NAME:root apb_pandas_utils_pckg/ ./apb_pandas_utils_pckg/
