--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
 *.sh text eol=lf
+*.rpm filter=lfs diff=lfs merge=lfs -text
